@startuml
hide empty members
hide circle
skinparam ArrowColor #333
skinparam ArrowThickness 1.5
skinparam ClassBackgroundColor White-APPLICATION
skinparam ClassBorderColor LightSlateGray
skinparam ClassBorderThickness 1
skinparam MinClassWidth 150
skinparam LineType Ortho
skinparam Shadowing false
skinparam PackageBackgroundColor #eee
skinparam PackageBorderColor #eee
skinparam PackageFontStyle normal
title db-draw
entity Assistant {
* id: integer
--
* details_id: integer
}
entity Course {
* id: integer
--
 faculty_id: integer
 required_id: integer
* name: string
}
entity CreditCard {
* id: integer
--
* ownerFullName: string
* number: string
* pin: string
* expirationDate: date
}
entity Faculty {
* id: integer
--
* name: string
}
entity Inscription {
* id: integer
--
* student_id: integer
* createdAt: datetime
}
entity Person {
* id: integer
--
* firstName: string
* lastName: string
 birthDate: datetime
* email: string
}
entity Session {
* id: integer
--
* course_id: integer
* teacher_id: integer
 assistant_id: integer
* academicYear: integer
* firstLesson: date
* lastLesson: date
* code: string
}
entity Student {
* id: integer
--
* details_id: integer
* username: string
* password: string
 creditCard_id: integer
}
entity Teacher {
* id: integer
--
* details_id: integer
}
entity inscription_session {
* inscription_id: integer
* session_id: integer
--
}
Assistant |o--|| Person
Course }o--o| Faculty
Course }o--o| Course
Inscription }o--|| Student
Session }o--|| Teacher
Session }o--|| Course
Session }o--o| Assistant
Student |o--o| CreditCard
Student |o--|| Person
Teacher |o--|| Person
inscription_session }o--|| Inscription
inscription_session }o--|| Session
package "views" {
entity introductory_courses { }
entity students_with_no_card { }
}
@enduml
